# Giaic_Q4_Assignments

litellm_chainlit_uv/: main.py  pyproject.toml
openrouter/: README.md  main.py  pyproject.toml
uv/uv_project1/: pyproject.toml
uv/uv_project1/src/uv_project1/: __init__.py  hello.py
uv/uv_project2/: pyproject.toml
uv/uv_project2/src/uv_project2/: main.py
