[project]
name = "uv-project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammadtalha678", email = "muhammadtalha0110@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uv-project1 = "uv_project1.hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
